--- a/nav.html
+++ b/nav.html
@@ -1,26 +1,67 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<section id="about-me">
-    <a href="#main" class="nav-link" id="nav-skip-to-content">Skip to Content</a>
-    <img class="width-125px margin_top-10px" src="assets/sai-picture-circle.png" alt="My Picture"><br>
-    <div id="about-me-top-inner">
-        <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">&nbsp;&nbsp;
-        <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
-    </div>
-</section>
-<br>
-<nav id="nav">
-    <div id="nav-links">
-        <a href="index.html" class="nav-link" id="nav-aboutme">About Me</a>
-        <a href="projects.html" class="nav-link" id="nav-projects">Projects</a>
-        <a href="research_volunteer.html" class="nav-link" id="nav-research">Research/Volunteer</a>
-        <a href="global_competetions.html" class="nav-link" id="nav-globalcomps">Global Competetions</a>
-        <a href="bootcamps.html" class="nav-link" id="nav-bootcamps">Bootcamps</a>
-        <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
-        <a href="browser_extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
-        <a href="apps.html" class="nav-link" id="nav-apps">Apps</a>
-        <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
-        <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
-        <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github" rel="noopener">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
-        <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
-    </div>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    </head>
+    <body>
+        <section id="about-me">
+            <a href="#main" class="nav-link" id="nav-skip-to-content">Skip to Content</a>
+            <img class="width-125px" src="assets/sai-picture-circle.png" alt="My Picture" id="about-me-image"><br>
+            <div id="about-me-top-inner">
+                <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">&nbsp;&nbsp;
+                <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
+            </div>
+        </section>
+        <br>
+        <nav id="nav">
+            <div id="nav-links">
+                <a href="index.html" class="nav-link" id="nav-aboutme">About Me</a>
+                <a href="projects.html" class="nav-link" id="nav-projects">Projects</a>
+                <a href="research_volunteer.html" class="nav-link" id="nav-research">Research/Volunteer</a>
+                <a href="global_competetions.html" class="nav-link" id="nav-globalcomps">Global Competetions</a>
+                <a href="bootcamps.html" class="nav-link" id="nav-bootcamps">Bootcamps</a>
+                <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
+                <a href="browser_extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
+                <a href="apps.html" class="nav-link" id="nav-apps">Apps</a>
+                <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
+                <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+                <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github" rel="noopener">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+                <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
+            </div>
+        </nav>
+        <nav id="mobile-nav">
+            <a href="javascript:openMobileNav()" id="mobile-nav-menu-opener"><i class="bi bi-list"></i>&nbsp;&nbsp;Menu</a>
+            <div id="mobile-nav-links-wrapper">
+                <a href="javascript:openMobileNav()" id="mobile-nav-menu-closer"><i class="bi bi-x-lg"></i></i></a><br>
+                <div id="mobile-nav-links">
+                    <a href="index.html" class="nav-link" id="mobile-nav-aboutme">About Me</a><br>
+                    <a href="projects.html" class="nav-link" id="mobile-nav-projects">Projects</a><br>
+                    <a href="research_volunteer.html" class="nav-link" id="mobile-nav-research">Research/Volunteer</a><br>
+                    <a href="global_competetions.html" class="nav-link" id="mobile-nav-globalcomps">Global Competetions</a><br>
+                    <a href="bootcamps.html" class="nav-link" id="mobile-nav-bootcamps">Bootcamps</a><br>
+                    <a href="certificates.html" class="nav-link" id="mobile-nav-certificates">Certificates</a><br>
+                    <a href="browser_extensions.html" class="nav-link" id="mobile-nav-extensions">Browser Extensions</a><br>
+                    <a href="apps.html" class="nav-link" id="mobile-nav-apps">Apps</a><br>
+                    <a href="clubs.html" class="nav-link" id="mobile-nav-clubs">Clubs</a><br>
+                    <a href="https://devsai.hashnode.dev" class="nav-link" id="mobile-nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br>
+                    <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="mobile-nav-github" rel="noopener">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br>
+                    <a href="youtube_channels.html" class="nav-link" id="mobile-nav-ytchannel">YouTube Channel</a>
+                </div>
+            </div>
+        </nav>
+        <script>
+            document.getElementById("mobile-nav-links-wrapper").style.display = "none";
+            function openMobileNav() {
+                if (document.getElementById("mobile-nav-links-wrapper").style.display == "none") {
+                    document.getElementById("mobile-nav-links-wrapper").style.display = "block";
+                } else {
+                    document.getElementById("mobile-nav-links-wrapper").style.display = "none";
+                }
+            }
+        </script>
+    </body>
+</html>
