--- a/bootcamps.html
+++ b/bootcamps.html
@@ -27,6 +27,7 @@
                     <p class="subtitle">Create enterprise-grade machine learning models with an emphasis on classification, regression, and clustering to address real-world issues.</p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
