--- a/youtube_channels.html
+++ b/youtube_channels.html
@@ -44,6 +44,7 @@
                     <p class="subtitle">Coding Channel</p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
