--- a/browser_extensions.html
+++ b/browser_extensions.html
@@ -22,6 +22,7 @@
                     <p class="subtitle"><a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0" target="_blank" rel="noopener">Chrome Webstore&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a> | <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl" target="_blank" rel="noopener">Microsoft Edge Add-ons&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
