--- a/clubs.html
+++ b/clubs.html
@@ -12,6 +12,20 @@
         .card {
             justify-content: center;
         }
+
+        .card:nth-child(2) {
+            margin-left: -15px;
+        }
+
+        @media only screen and (max-width: 750px) {
+            .card:nth-child(2) {
+                margin-left: 0px;
+            }
+
+            .card:nth-child(3) {
+                margin-left: -20px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -48,6 +62,7 @@
                     </p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
