--- a/global_competetions.html
+++ b/global_competetions.html
@@ -22,6 +22,7 @@
                     <p class="subtitle"><a href="https://online.coolestprojects.org/projects/3430" target="_blank" rel="noopener">Coolest Project Global Contest | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
