--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,7 @@
                     <p class="subtitle"><b class="color-white">Languages & Tools:</b> C#, Unity</p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <div id="prompt-outer">
