--- a/research_volunteer.html
+++ b/research_volunteer.html
@@ -41,6 +41,7 @@
                     <p class="subtitle"><b class="color-white">Languages & Tools:</b> Microsoft Powerpoint</p>
                 </div>
             </div>
+            <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
