--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <b class="font_size-15px color-white"><i class="bi bi-code-slash"></i>&nbsp;&nbsp;Programming Languages:</b> HTML5 (Markup Language), CSS3 (Stylesheet Language), SASS (Preprocessor Language), JavaScript, jQuery (JS Library), Java, C#, MATLAB, Python, Lua (Roblox)<br><br>
                 <b class="font_size-15px color-white"><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio 2019 & 2022, Visual Studio Code, Windows Forms, Replit, Unity 2021, PyCharm 2021 & 2022, MATLAB 2021, Roblox Studio 2022, Android Studio Chipmunk 2021<br>
             </p>
-            <p class="font_size-15px color-white text_align-center"><i class="bi bi-envelope-fill"></i>&nbsp;Email me at <a href="mailto:saisiddhish@gmail.com" >saisiddhish@gmail.com</a><br><br><br>Designed & Developed by: Sai Siddhish Chandra Sekaran<br><br>©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
+            <p class="font_size-15px color-white text_align-center"><i class="bi bi-envelope-fill"></i>&nbsp;Email me at <a href="mailto:sai@saisiddhish.me" >sai@saisiddhish.me</a><br><br><br>Designed & Developed by: Sai Siddhish Chandra Sekaran<br><br>©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
