--- a/research_volunteer.html
+++ b/research_volunteer.html
@@ -16,7 +16,7 @@
             <div class="card">
                 <img src="https://th.bing.com/th/id/R.fa5b2027c9f7218cb54b8c4155d62331?rik=EDlZnz7dwfi6jg&pid=ImgRaw&r=0" alt="Psychologist Appointment Image">
                 <div class="card-right">
-                    <p class="title"><a href="https://omdena.com/projects/ai-psychologist/" target="_blank" rel="noopener">NLP and Conversational AI for Compassionate AI Psychologist with Human-like Memory | November 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></p><br>
+                    <p class="title"><a href="https://omdena.com/projects/ai-psychologist/" target="_blank" rel="noopener">Omdena: NLP and Conversational AI for Compassionate AI Psychologist with Human-like Memory | November 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></p><br>
                     <p class="subtitle">Create an AI psychologist who can have kind discussions utilizing a voice-based conversational AI technique and who is able to recognize peoples' emotions and their underlying mental health condition.</p>
                     <p class="subtitle"><b class="color-white">Role:</b> Junior ML Engineer</p>
                     <p class="subtitle"><b class="color-white">Languages & Tools:</b> React.JS, Python</p>
