--- a/nav.html
+++ b/nav.html
@@ -36,7 +36,7 @@
         <nav id="mobile-nav">
             <a href="javascript:openMobileNav()" id="mobile-nav-menu-opener"><i class="bi bi-list"></i>&nbsp;&nbsp;Menu</a>
             <div id="mobile-nav-links-wrapper">
-                <a href="javascript:openMobileNav()" id="mobile-nav-menu-closer"><i class="bi bi-x-lg"></i></i></a><br>
+                <a href="javascript:openMobileNav()" id="mobile-nav-menu-closer" title="Close Menu"><i class="bi bi-x-lg"></i></i></a><br>
                 <div id="mobile-nav-links">
                     <a href="index.html" class="nav-link" id="mobile-nav-aboutme">About Me</a><br>
                     <a href="projects.html" class="nav-link" id="mobile-nav-projects">Projects</a><br>
