--- a/research_volunteer.html
+++ b/research_volunteer.html
@@ -27,7 +27,7 @@
                 <div class="card-right">
                     <p class="title"><a href="https://omdena.com/chapter-challenges/using-machine-learning-to-reduce-food-waste/" target="_blank" rel="noopener">Omdena K-12 Chapter: Using Machine Learning to Reduce Food Wastage | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
                     <p class="subtitle">To create an AI model that can scan and recognize waste materials, including food writing a program that can identify when waste is getting close to its expiration date and then make recommendations for what to do with the waste.</p>
-                    <p class="subtitle"><b class="color-white">Role:</b> ML Engineer</p>
+                    <p class="subtitle"><b class="color-white">Role:</b> Front-end Designer</p>
                     <p class="subtitle"><b class="color-white">Languages & Tools:</b> Figma, Flutter</p>
                     <p class="subtitle"><a href="https://www.linkedin.com/posts/omdena_omdena-k12-machinelearning-activity-6943430799203422208-R_6Y?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener">LinkedIn News Feed | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
