--- a/404.html
+++ b/404.html
@@ -13,10 +13,29 @@
             text-align: center;
             padding: 0;
             margin: 0;
+            overflow-x: hidden;
+        }
+
+        #error404 {
+            font-size: 100px;
+            opacity: 0.3; 
+            margin-top: -10px;        
+            animation: error404-opacity 2.5s ease-out infinite 0s alternate both; 
+        }
+
+        @keyframes error404-opacity {
+            0% {
+                opacity: 0.25;
+            }
+
+            100% {
+                opacity: 0.7;
+            }
         }
 
         #title {
-            font-size: 50px;
+            margin-top: -120px;
+            font-size: 60px;
             margin-bottom: -10px;
         }
 
@@ -101,10 +120,12 @@
             list-style: url(assets/404/search_icon.svg);
             padding: 5px;
             margin-left: 20px;
+            z-index: 2;
         }
 
         #action-links {
             font-size: 19px;
+            margin-top: -15px;
         }
 
         #action-links > a {
@@ -131,8 +152,13 @@
 <body>
     <div id="loadedNav"></div>
     <main id="main">
-        <h1 id="title">Error 404</h1>
-        <p>This page is missing or maybe it never existed...</p>
+        <p id="error404">404</p>
+        <h1 id="title">Oops...</h1>
+        <p>The page you were looking for is missing or maybe... it never existed.</p>
+        <div id="action-links">
+            <a href="index.html">Go to Home <p><i class="bi bi-arrow-right"></i></p></a><br>
+            <a href="projects.html">View Projects <p><i class="bi bi-arrow-right"></i></p></a>
+        </div>
         <div id="search-wrapper">
             <div id="search-bar">
                 <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="search-icon" fill="white"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
@@ -150,10 +176,6 @@
                 <li class="search-option"><a href="research_volunteer.html">Research & Volunteer Work</a></li>
                 <li class="search-option"><a href="youtube_channels.html">YouTube Channels</a></li>
             </ul>
-        </div><br>
-        <div id="action-links">
-            <a href="index.html">Go to Home <p><i class="bi bi-arrow-right"></i></p></a><br>
-            <a href="projects.html">View Projects <p><i class="bi bi-arrow-right"></i></p></a>
         </div>
     </main>
     
