--- a/bootcamps.html
+++ b/bootcamps.html
@@ -16,8 +16,8 @@
             <div class="card">
                 <img src="https://th.bing.com/th/id/OIP.SSOdAEuceJWlcsIupaRGdAHaF7?pid=ImgDet&rs=1" alt="Lung Image">
                 <div class="card-right">
-                    <p class="title">[IN PROGRESS] Mark Cuban Foundation AI Bootcamp | November 2022</p><br>
-                    <p class="subtitle">Information will be available after 11/12/2022</p>
+                    <p class="title">Mark Cuban Foundation AI Bootcamp | November 2022</p><br>
+                    <p class="subtitle">Week 1: &nbsp;AI Chatbot<br>Week 2: Regression<br>Week 3: Classification<br>Week 4: Natural Language Processing</p>
                 </div>
             </div>
             <div class="card">
