added multi-lingual input tools website

--- a/browser_extensions.html
+++ b/browser_extensions.html
@@ -19,7 +19,7 @@
                     <p class="title">Multi-Lingual Input Tools | April 2022</p><br>
                     <p class="subtitle">You can quickly & easily copy paste accented letters and symbols from a several of languages with this extension.</p>
                     <p class="subtitle"><b class="color-white">Languages & Tools:</b> HTML5, CSS3, JavaScript, Manivest V3 (JSON), Visual Studio Code</p>
-                    <p class="subtitle"><a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0" target="_blank" rel="noopener">Chrome Webstore&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a> | <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl" target="_blank" rel="noopener">Microsoft Edge Add-ons&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
+                    <p class="subtitle"><a href="https://extensions.saisiddhish.me/multi-lingual-input-tools">Website</a> | <a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0" target="_blank" rel="noopener">Chrome Webstore&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a> | <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl" target="_blank" rel="noopener">Microsoft Edge Add-ons&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
             </div>
             <p class="font_size-15px color-white text_align-center">©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
