--- a/nav.html
+++ b/nav.html
@@ -28,7 +28,7 @@
                 <a href="browser_extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
                 <a href="apps.html" class="nav-link" id="nav-apps">Apps</a>
                 <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
-                <a href="https://blog.saisiddhish.me" class="nav-link" id="nav-blog">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+                <a href="https://blog.saisiddhish.me" class="nav-link" id="nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
                 <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github" rel="noopener">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
                 <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
             </div>
@@ -47,7 +47,7 @@
                     <a href="browser_extensions.html" class="nav-link" id="mobile-nav-extensions">Browser Extensions</a><br>
                     <a href="apps.html" class="nav-link" id="mobile-nav-apps">Apps</a><br>
                     <a href="clubs.html" class="nav-link" id="mobile-nav-clubs">Clubs</a><br>
-                    <a href="https://blog.saisiddhish.me" class="nav-link" id="mobile-nav-blog">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br>
+                    <a href="https://blog.saisiddhish.me" class="nav-link" id="mobile-nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br>
                     <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="mobile-nav-github" rel="noopener">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br>
                     <a href="youtube_channels.html" class="nav-link" id="mobile-nav-ytchannel">YouTube Channel</a>
                 </div>
