Added Google Analytics

--- a/bootcamps.html
+++ b/bootcamps.html
@@ -8,6 +8,15 @@
     <link href="assets/s-logo-circle.png" rel="icon">
     <link href="styles.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HZBJ7WW7G6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HZBJ7WW7G6');
+    </script>
 </head>
 <body>
     <div id="loadedNav"></div>
