--- a/clubs.html
+++ b/clubs.html
@@ -27,6 +27,15 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HZBJ7WW7G6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HZBJ7WW7G6');
+    </script>
 </head>
 <body>
     <div id="loadedNav"></div>
